# OneClickRGB-Universal

./: ARCHITECTURE.md  CMakeLists.txt  LICENSE  README.md  SUPPORTED_HARDWARE.md
config/: config_bundle.schema.json  hardware_db.json  hardware_db.schema.json
dependencies/hidapi/: hidapi.h
docs/: ADDING_DEVICES.md  CONFIG_STRUCTURE.md  CROSS_PLATFORM_ARCHITECTURE.md  LEGACY_FEATURE_EXTRACTION.md  MIGRATIONS.md  RASPBERRY_PI.md  REPOSITORY_STRUCTURE.md
src/: OneClickRGB.cpp  OneClickRGB.h  main.cpp
src/app/config/: ConfigBundleParser.cpp  ConfigBundleParser.h  DeviceConfiguration.cpp  DeviceConfiguration.h
src/app/effects/: EffectFactory.cpp  EffectFactory.h
src/app/fingerprint/: MachineFingerprint.cpp  MachineFingerprint.h
src/app/pipeline/: DevicePipeline.cpp  DevicePipeline.h
src/app/services/: DeviceService.cpp  DeviceService.h  ProfileResolver.cpp  ProfileResolver.h  ProvisioningService.cpp  ProvisioningService.h
src/bridges/: GPIOBridge.cpp  GPIOBridge.h  HIDBridge.cpp  HIDBridge.h  IBridge.h  SMBusBridge.cpp  SMBusBridge.h
src/core/: DeviceRegistry.cpp  DeviceRegistry.h  DryRunMode.h  Types.h
src/devices/: GPIODevice.cpp  GPIODevice.h  HIDDevice.cpp  HIDDevice.h  IDevice.h  SMBusDevice.cpp  SMBusDevice.h
src/platform/: IPlatform.h  PlatformFactory.cpp
src/platform/linux/: I2CDevSMBus.cpp  I2CDevSMBus.h  LinuxDeviceEnumerator.cpp  LinuxDeviceEnumerator.h  LinuxPlatform.cpp  LinuxPlatform.h  SysfsSystemInfo.cpp  SysfsSystemInfo.h
src/platform/macos/: IOKitSystemInfo.cpp  IOKitSystemInfo.h  MacOSDeviceEnumerator.cpp  MacOSDeviceEnumerator.h  MacOSPlatform.cpp  MacOSPlatform.h
src/platform/windows/: PawnIOSMBus.cpp  PawnIOSMBus.h  WindowsDeviceEnumerator.cpp  WindowsDeviceEnumerator.h  WindowsPlatform.cpp  WindowsPlatform.h  WmiSystemInfo.cpp  WmiSystemInfo.h
src/plugins/: PluginFactory.cpp  PluginFactory.h
src/plugins/asus/: AsusAuraController.cpp  AsusAuraController.h
src/plugins/evision/: EVisionKeyboard.cpp  EVisionKeyboard.h
src/plugins/gpio/: WS2812Controller.cpp  WS2812Controller.h
src/plugins/gskill/: GSkillTridentZ5.cpp  GSkillTridentZ5.h
src/plugins/steelseries/: SteelSeriesRival.cpp  SteelSeriesRival.h
src/scanner/: HardwareScanner.cpp  HardwareScanner.h
tests/: TestFramework.h  test_bundle_parser.cpp  test_config.cpp  test_dryrun.cpp  test_effects.cpp  test_main.cpp  test_platform.cpp  test_registry.cpp  test_types.cpp
tools/: generate_config.py
